# webappcontainer

./: .gitignore  CMakeLists.txt  README.md  browserwindow.cpp  browserwindow.h  browserwindow.ui  certificateerrordialog.ui  downloadmanagerwidget.cpp  downloadmanagerwidget.h  downloadwidget.cpp  downloadwidget.h  downloadwidget.ui  main.cpp  publicsuffixlist.cpp  publicsuffixlist.h  resources.qrc  webauthdialog.cpp  webauthdialog.h  webauthdialog.ui  webpage.cpp  webpage.h  webpopupwindow.cpp  webpopupwindow.h  webview.cpp  webview.h
cmake/: DownloadPSL.cmake  DownloadWidevine.cmake
tests/: tst_serviceworker.cpp  tst_widevine.cpp
tests/resources/: sw.js  test_sw.html
